# SkipList

./: .gitignore  CMakeLists.txt  generator.py
include/: simple_list.h  skip_list.h
src/: CMakeLists.txt  main.c  simple_list.c  skip_list.c
test/: CMakeLists.txt  test.c
